--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+
+
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    
     font-weight: 400;
     font-family: 'Ubuntu', sans-serif;
     color: #323130;
@@ -12,14 +18,67 @@ body {
     font-size: 1em;
 }
 
-@media (max-width:800px){
-    :root{
-        font-size: 0.875em;
-    }
-}
 
-@media (min-width:1200px){
+
+@media (max-width:800px){
     :root{
         font-size: 1.2em;
     }
+}
+
+
+
+@media (min-width:1200px){
+    :root{
+        font-size: 0.8em;
+    }
+}
+
+header{
+    display: block;
+    background-color: #fef5f3;
+}
+
+@media (max-width:800px){
+.navbar > .container{
+    padding-right: 0;
+    padding-left: 0;
+    }
+}
+
+.navbar .container{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+div {
+    display: block;
+}
+
+.navbar .navbar-logo{
+    
+    color: #000;
+}
+
+.navbar-logo{
+    font-size: 1.5em ;
+    font-weight: 700; 
+    display: inline-block;
+    padding-top: .35em;
+    padding-bottom: .35em;
+    margin-right: 1em;
 }
