--- a/style.css
+++ b/style.css
@@ -82,3 +82,68 @@ div {
     padding-bottom: .35em;
     margin-right: 1em;
 }
+
+a {
+    color: #323130;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+a:link {
+   
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+button:not(:disabled) {
+    cursor: pointer;
+}
+
+.navbar-toggler {
+    position: relative;
+    z-index: 1111;
+    border: solid 1px #f8f8f8;
+    height: 3em;
+    display: block;
+    width: 3em;
+    padding: .25em .75em;
+    font-size: 1.25em;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+
+button {
+    overflow: visible;
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border-radius: 0;
+}
+
+@media (max-width: 800px){
+    .navbar-collapse {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: -100%;
+        width: 100%;
+        padding: 1.5em 1em;
+        overflow-y: auto;
+        visibility: hidden;
+        background-color: #6c757d;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .navbar-collapse {
+        -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        -ms-flex-align: center;
+        align-items: center;
+    }
