--- a/style.css
+++ b/style.css
@@ -5,18 +5,26 @@ body {
 }
 
 :root{
-   font-size: 1em;
+   font-size: calc(1vw + 0.6rem);
+   box-sizing: border-box;
 }
+
+*,
+*::after,
+*::before{
+    box-sizing: inherit;
+}
+
 
 @media (max-width:800px){
     :root{
-        font-size: 1.2em;
+        font-size: 1.2rem;
     }
 }
 
 @media (min-width:1200px){
     :root{
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
 }
 
@@ -78,7 +86,7 @@ a {
 a:link {
    
     cursor: pointer;
-    text-decoration: underline;
+    
 }
 
 button:not(:disabled) {
@@ -86,6 +94,7 @@ button:not(:disabled) {
 }
 
 .navbar-toggler {
+    
     position: relative;
     z-index: 1111;
     border: solid 1px #f8f8f8;
@@ -97,8 +106,11 @@ button:not(:disabled) {
     line-height: 1;
     background-color: transparent;
     border: 1px solid transparent;
-    border-radius: .25rem;
+    border-radius: .25rem; 
+    
 }
+
+
 
 button {
     overflow: visible;
@@ -152,13 +164,78 @@ ul > li {
     line-height: 2.8;
 }
 
-.navbar-toggler .fa{
-    width: 1.8em;
+.navbar-toggler{
+    
+        padding: .25rem .75rem;
+        font-size: 1.25rem;
+        line-height: 1;
+        background-color: transparent;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+}
+
+.navbar-toggler .hamburger{
+    width: 24px;
+    height: 15px;
+    display: inline-block;
+    position: relative;
+    -webkit-transform: rotate(
+0deg
+);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    border: none;
+    /* width: 1.8em;
     height: 1.8em;
     display: inline-block;
     position: relative;
     cursor: pointer;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+     */
+}
+
+.hamburger .line {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: red;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(
+0deg
+);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+    -ms-transition: .25s ease-in-out;
+    
+}
+
+.hamburger span:nth-child(1) {
+    top: 0;
+}
+
+.hamburger span:nth-child(2) {
+    top: 7px;
+}
+
+.hamburger span:nth-child(3) {
+    top: 14px;
 }
 
 .navbar-droppdown{
